'main' class overflow changed from hidden to visible and 'home' class added overflow:hidden to make the main class work correctly for section pages (plan.php etc)

--- a/styles/pages.css
+++ b/styles/pages.css
@@ -70,7 +70,7 @@
   padding: 1%;
   float: none;
   clear: both;
-  overflow: hidden;
+  overflow: visible;
   height: 80%;
 
   border-radius: 21px;
@@ -123,6 +123,7 @@
   border: 3px solid DimGray;
   /* background-color: bisque; */
   background-color: Gainsboro;
+  overflow: hidden;
 }
 
 .home>a {
